--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,35 @@
 # SITE CONFIGURATION
 baseurl: ""
 url: "https://joriskok.github.io"
-title: Type on Strap # site's title
-description: "A website with blog posts and pages" # used by search engines
+title: Frappant Chinees # site's title
+description: "Chinees leren met ons boek of youtube videos" # used by search engines
 
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Type on Strap # blog's title
+  title: Frappant Chinees # blog's title
   avatar: assets/img/triangle.svg
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>Change header text in <code>_config.yml</code> <br> to update this feature.</p>
+     <p>Chinees leren met Frappant Chinees <br> met het boek <br> of met muziek videos</p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: >
-   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+   Gemaakt door Joris Kok met<a href="https://jekyllrb.com/">Jekyll</a>
 
   # Icons
-  rss: true  # Make sure you created a feed.xml with feed.xml layout
-  email_address: # Full email address, e.g. "sam@example.com"
+  rss:  # Make sure you created a feed.xml with feed.xml layout
+  email_address: info@frappantchinees.nl # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
   dribbble:
   facebook:
   flickr:
   gitlab:
-  github: "sylhare"
+  github: "JorisKok"
   google_plus:
   instagram:
   keybase:
@@ -98,3 +98,7 @@ sass:
 plugins: [jekyll-paginate, jekyll-seo-tag]
 theme: type-on-strap # Uncomment if using the theme as a jekyll theme gem
 exclude: ["Gemfile", "Gemfile.lock", "type-on-strap.gemspec", "*.gem", "LICENSE", "README.md", "screenshot.png"]
+
+book:
+  link: /shop/
+  price: €18.00
