--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,15 @@ description: "Chinees leren met ons boek of youtube videos" # used by search eng
 theme_settings:
   # Meta
   title: Frappant Chinees # blog's title
-  avatar: assets/img/triangle.svg
-  favicon: assets/favicon.ico
+  avatar: assets/img/logo.png
+  favicon: assets/img/favicon.ico
   gravatar: # Email MD5 hash
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
      <p>Chinees leren met Frappant Chinees <br> met het boek <br> of met muziek videos</p>
-  header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: >
-   Gemaakt door Joris Kok met<a href="https://jekyllrb.com/">Jekyll</a>
+   Gemaakt door Joris Kok met <a href="https://jekyllrb.com/">Jekyll</a>
 
   # Icons
   rss:  # Make sure you created a feed.xml with feed.xml layout
